# aivika-distributed-example-cqn

./: README.md  aivika-distributed-example-cqn.cabal  cqn.conf
app/: Main.hs
src/: DistributedModel.hs  DistributedNode.hs  ModelConfig.hs  ParallelNode.hs  PseudoSeqModel.hs  PseudoSeqNode.hs  SeqModel.hs  SimpleLocalnetHelper.hs
