name:                aivika-distributed-example-cqn
version:             0.1.0.0
synopsis:            A closed queue network simulation model for the distributed module of Aivika
description:
    This is a closed queue network simulation model for the distributed module of Aivika [1].
    .
    \[1] <http://www.aivikasoft.com>
    .
homepage:            https://github.com/dsorokin/aivika-distributed-example-cqn#readme
license:             BSD3
license-file:        LICENSE
author:              David Sorokin
maintainer:          david.sorokin@gmail.com
copyright:           (c) 2018. David Sorokin <david.sorokin@gmail.com>
category:            Simulation
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SimpleLocalnetHelper
                       ModelConfig
                       SeqModel
                       PseudoSeqNode
                       PseudoSeqModel
                       ParallelNode
                       DistributedNode
                       DistributedModel
  build-depends:       base >= 4.7 && < 5
                     , aivika
                     , aivika-transformers
                     , aivika-distributed
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , binary
                     , bytestring
                     , network-transport
                     , ini
                     , text
                     , mtl
                     , array
  default-language:    Haskell2010

executable aivika-distributed-example-cqn
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aivika
                     , aivika-transformers
                     , aivika-distributed
                     , aivika-distributed-example-cqn
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , binary
                     , random
                     , mtl
  default-language:    Haskell2010
  other-extensions:    TemplateHaskell,
                       DeriveGeneric,
                       DeriveDataTypeable

test-suite aivika-distributed-example-cqn-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aivika-distributed-example-cqn
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dsorokin/aivika-distributed-example-cqn
